--- a/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfedquota.1
+++ b/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfedquota.1
@@ -1,22 +1,13 @@
 '\" t
 .\"     Title: gfedquota
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 25 Aug 2015
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFEDQUOTA" "1" "25 Aug 2015" "Gfarm" "Gfarm"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
+.TH "GFEDQUOTA" "1" "29 Oct 2016" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -31,15 +22,21 @@
 gfedquota \- ファイル制限を編集
 .SH "SYNOPSIS"
 .HP \w'\fBgfedquota\fR\ 'u
-\fBgfedquota\fR [\fIオプション\fR]
+\fBgfedquota\fR [オプション] \-u\ \fIユーザ名\fR
+.HP \w'\fBgfedquota\fR\ 'u
+\fBgfedquota\fR [オプション] \-g\ \fIグループ名\fR
+.HP \w'\fBgfedquota\fR\ 'u
+\fBgfedquota\fR [オプション] \-D\ \fIdirset名\fR
 .SH "DESCRIPTION"
 .PP
 \fBgfedquota\fR
 は、 ユーザやグループに対するファイル制限を編集できます。
 .PP
-制限の種類には、ソフトリミットとハードリミットがあります。 ソフトリミットには猶予期間を設定できます。 制限する対象は、ファイル数の合計とファイルサイズの合計、 レプリカを含めた実ファイル数の合計と実ファイルサイズの合計です。 制限値に \*(Aqdisable\*(Aq または \-1 を指定すると、無制限になります。 制限するためのオプションを指定しなければ、 割り当て量 (quota) は変わりません。
+制限の種類には、ソフトリミットとハードリミットがあります。 ソフトリミットには猶予期間を設定できます。 制限する対象は、ファイル数の合計とファイルサイズの合計、 レプリカを含めた実ファイル数の合計と実ファイルサイズの合計です。 制限値に \'disable\' または \-1 を指定すると、無制限になります。 制限するためのオプションを指定しなければ、 割り当て量 (quota) は変わりません。
 .PP
 このコマンドは gfarmadm グループに所属する管理者だけが実行できます。
+.PP
+ただし、\-D オプション指定の管理者グループとしては、 gfarmadm グループではなく、gfarmroot グループが使われます。
 .SH "OPTIONS"
 .PP
 \fB\-P NAME, \-\-path=NAME\fR
@@ -55,6 +52,11 @@ gfedquota \- ファイル制限を編集
 \fB\-g NAME, \-\-group=NAME\fR
 .RS 4
 制限を編集する対象のグループ名を指定します。
+.RE
+.PP
+\fB\-D NAME, \-\-dirset=NAME\fR
+.RS 4
+制限を編集する対象の dirset名 を指定します。
 .RE
 .PP
 \fB\-G SECOND, \-\-grace=SECOND\fR
@@ -108,6 +110,9 @@ gfedquota \- ファイル制限を編集
 .RE
 .SH "SEE ALSO"
 .PP
+
 \fBgfquota\fR(1),
 \fBgfquotacheck\fR(1),
-\fBgfusage\fR(1)
+\fBgfdirquota\fR(1),
+\fBgfusage\fR(1),
+Gfarm ユーザーズマニュアル / Directory Quota 機能
