--- a/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfquota.1
+++ b/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfquota.1
@@ -1,22 +1,13 @@
 '\" t
 .\"     Title: gfquota
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 23 Mar 2011
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFQUOTA" "1" "23 Mar 2011" "Gfarm" "Gfarm"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
+.TH "GFQUOTA" "1" "29 Oct 2016" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -31,11 +22,19 @@
 gfquota \- 現在の使用量と制限値を表示
 .SH "SYNOPSIS"
 .HP \w'\fBgfquota\fR\ 'u
-\fBgfquota\fR [\fIオプション\fR]
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] [\-u\ \fIユーザ名\fR]
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-g\ \fIグループ名\fR
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-D\ \fIdirset名\fR [\-u\ \fIユーザ名\fR]
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-d\ \fIディレクトリ\fR
 .SH "DESCRIPTION"
 .PP
 \fBgfquota\fR
 は、現在の使用量と制限値を表示します。 gfarmadm グループに所属している管理者は、ユーザ名やグループ名を指定する ことができます。 一般ユーザの場合は、そのユーザが所属するグループ名を指定することができ ます。
+.PP
+ただし、\-D オプション指定時にユーザ名を指定できる管理者グループとしては、 gfarmadm グループではなく、gfarmroot グループが使われます。
 .PP
 \fBgfedquota\fR
 と
@@ -65,6 +64,16 @@ gfquota \- 現在の使用量と制限値を表示
 指定したグループ名の使用量と制限値を表示します。
 .RE
 .PP
+\fB\-D NAME\fR
+.RS 4
+指定した dirset名 の使用量と制限値を表示します。
+.RE
+.PP
+\fB\-d NAME\fR
+.RS 4
+指定したパス名のディレクトリが所属する dirset の使用量と制限値を表示します。
+.RE
+.PP
 \fB\-h\fR
 .RS 4
 数字を「M(メガ)」のような単位つきで読みやすく表示します。 単位には2の累乗を用いますので、「M」は 1,048,576 を意味します。
@@ -84,4 +93,6 @@ gfquota \- 現在の使用量と制限値を表示
 
 \fBgfedquota\fR(1),
 \fBgfquotacheck\fR(1),
-\fBgfusage\fR(1)
+\fBgfdirquota\fR(1),
+\fBgfusage\fR(1),
+Gfarm ユーザーズマニュアル / Directory Quota 機能
