--- a/gfarm_v2/branches/2.6.dirquota/man/man1/gfquota.1
+++ b/gfarm_v2/branches/2.6.dirquota/man/man1/gfquota.1
@@ -1,22 +1,13 @@
 '\" t
 .\"     Title: gfquota
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 23 Mar 2011
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFQUOTA" "1" "23 Mar 2011" "Gfarm" "Gfarm"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
+.TH "GFQUOTA" "1" "29 Oct 2016" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -31,11 +22,19 @@
 gfquota \- display the current usage and limits
 .SH "SYNOPSIS"
 .HP \w'\fBgfquota\fR\ 'u
-\fBgfquota\fR [\fIoptions\fR]
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] [\-u\ \fIuser_name\fR]
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-g\ \fIgroup_name\fR
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-D\ \fIdirset_name\fR [\-u\ \fIuser_name\fR]
+.HP \w'\fBgfquota\fR\ 'u
+\fBgfquota\fR [\-qHh] [\-P\ \fIpath\fR] \-d\ \fIdirectory\fR
 .SH "DESCRIPTION"
 .PP
 \fBgfquota\fR
 displays your current usage and limits\&. An administrator in the gfarmadm group can specify a user or a group to display\&. If you are a general user, you can specify a group which you belong to\&.
+.PP
+\-D option is an exception and gfarmroot is used instead of gfarmadm as the administrator group who can specify user name\&.
 .PP
 The count of usage and the check of quota are enabled after executing
 \fBgfedquota\fR
@@ -66,6 +65,16 @@ Specifies a user name to display the current usage and limits\&.
 Specifies a group name to display the current usage and limits\&.
 .RE
 .PP
+\fB\-D NAME\fR
+.RS 4
+Specifies a dirset name to display the current usage and limits\&.
+.RE
+.PP
+\fB\-d NAME\fR
+.RS 4
+Specifies a directory pathname, to display the current usage and limits of a dirset that the directory belongs to\&.
+.RE
+.PP
 \fB\-h\fR
 .RS 4
 Displays numbers in human readable format by adding a prefix multiplier symbol like "M" (mega)\&. Since this option uses powers of 1024, "M" means 1,048,576\&.
@@ -85,4 +94,6 @@ Displays a list of command options\&.
 
 \fBgfedquota\fR(1),
 \fBgfquotacheck\fR(1),
-\fBgfusage\fR(1)
+\fBgfdirquota\fR(1),
+\fBgfusage\fR(1),
+Gfarm Users\' Manual / Directory Quota
