--- a/gfarm_v2/branches/2.6.dirquota/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.6.dirquota/man/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 23 April 2016
+.\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "23 April 2016" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "29 Oct 2016" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -908,6 +908,29 @@ For example,
 .\}
 .nf
 	digest md5
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+directory_quota_count_per_user_limit \fInumber\fR
+.RS 4
+The
+directory_quota_count_per_user_limit
+statement limits maximum number of dirset per user\&.
+.sp
+The default limit is 100\&.
+.sp
+This directive is only available in gfmd\&.conf, and ignored in gfarm2\&.conf\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	directory_quota_count_per_user_limit 1000
 .fi
 .if n \{\
 .RE
@@ -2284,6 +2307,7 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<auth_statement> |
 	<shared_key_file_statement> |
 	<digest_statement> |
+	<directory_quota_count_per_user_limit_statement> |
 
 	<sockopt_statement> |
 
@@ -2914,6 +2938,20 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .nf
 "digest" <digest_type>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<directory_quota_count_per_user_limit_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"directory_quota_count_per_user_limit" <number>
 .fi
 .if n \{\
 .RE
