--- a/gfarm_v2/branches/2.7/INSTALL.en
+++ b/gfarm_v2/branches/2.7/INSTALL.en
@@ -53,6 +53,15 @@ Options for configure:
   If you need to specify a flavor, specify it with the
   --with-globus-flavor=flavor option.
 
+  --with-infiniband=directory
+
+  Specifies to use RDMA through InfiniBand. When a original package is
+  installed, appoint the directory.
+
+  Memory resource limit must be enough to perform RDMA effectively.
+  Please edit /etc/security/limits.conf and enlarge the limit.
+	"* hard memlock unlimited"
+
   --without-mtsafe-netdb
 
   Specifies if either getaddrinfo(3) or getnameinfo(3) library function
