--- a/gfarm_v2/branches/2.7/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/branches/2.7/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -2418,6 +2418,67 @@ The default size is 1024 bytes.
 </listitem>
 </varlistentry>
 
+<varlistentry>
+<term><token>rdma_mr_reg_mode</token> <parameter moreinfo="none">mode</parameter></term>
+<listitem>
+<para>
+Specify the registration method of the RDMA transfer buffer of the client.
+</para>
+<para><token>static</token> mode registers one transfer buffer for every connection with a gfsd.
+</para>
+<para><token>dynamic</token> mode repeats registration and deregistration
+at every transfer.
+</para>
+<para>
+Although the static mode is faster than dynamic mode,
+memory load becomes higher and may fail in registration because the memories are locked through the connections.
+</para>
+<para>
+The default mode is static and dynamic.
+</para>
+
+<para>For example,</para>
+<literallayout format="linespecific" class="normal">
+	rdma_mr_reg_mode static
+	rdma_mr_reg_mode static dynamic
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>rdma_mr_reg_static_min_size</token> <parameter moreinfo="none">size</parameter></term>
+<listitem>
+<para>
+Specify the initial buffer size when the static mode is selected
+with rdma_mr_reg_mode.
+</para>
+<para>
+The default size is 1 megabytes.
+</para>
+<para>For example,</para>
+<literallayout format="linespecific" class="normal">
+	rdma_mr_reg_static_min_size 1048576
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>rdma_mr_reg_static_max_size</token> <parameter moreinfo="none">size</parameter></term>
+<listitem>
+<para>
+Specify the maximum expansion buffer size when the static mode is selected
+with rdma_mr_reg_mode.
+</para>
+<para>
+The default size is 16 megabytes.
+</para>
+<para>For example,</para>
+<literallayout format="linespecific" class="normal">
+	rdma_mr_reg_static_max_size 16777216
+</literallayout>
+</listitem>
+</varlistentry>
+
 
 </variablelist>
 </refsect1>
@@ -2533,6 +2594,13 @@ The default size is 1024 bytes.
 	&lt;replica_check_host_down_thresh_statement&gt; |
 	&lt;replica_check_sleep_time_statement&gt; |
 	&lt;replica_check_minimum_interval_statement&gt; |
+	&lt;ib_rdma_statement&gt; |
+	&lt;rdma_device_statement&gt; |
+	&lt;rdma_port_statement&gt; |
+	&lt;rdma_min_size_statement&gt; |
+	&lt;rdma_mr_reg_mode_statement&gt; |
+	&lt;rdma_mr_reg_static_min_size_statement&gt; |
+	&lt;rdma_mr_reg_static_max_size_statement&gt; |
 	&lt;write_verify_statement&gt; |
 	&lt;write_verify_interval_statement&gt; |
 	&lt;write_verify_retry_interval_statement&gt; |
@@ -3251,6 +3319,46 @@ The default size is 1024 bytes.
 <term>&lt;fatal_action_name&gt; ::=</term>
 <listitem><literallayout format="linespecific" class="normal">"backtrace_and_abort" | "backtrace_and_exit" |
 	"abort" | "exit"</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;ib_rdma_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"ib_rdma" &lt;validity&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_device_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_device" &lt;string&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_port_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_port" &lt;number&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_min_size_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_min_size" &lt;number&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_mr_reg_mode_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_mr_reg_mode" &lt;mr_reg_mode&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;mr_reg_mode&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"static" | "dynamic" | "static" "dynamic" </literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_mr_reg_static_min_size_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_mr_reg_static_min_size" &lt;number&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;rdma_mr_reg_static_max_size_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"rdma_mr_reg_static_max_size" &lt;number&gt;</literallayout></listitem>
 </varlistentry>
 
 <varlistentry>
