--- a/gfarm_v2/branches/2.6.dirquota/doc/docbook/ja/ref/man1/gfdirquota.1.docbook
+++ b/gfarm_v2/branches/2.6.dirquota/doc/docbook/ja/ref/man1/gfdirquota.1.docbook
@@ -15,7 +15,7 @@
 
 <refnamediv id="name">
 <refname>gfdirquota</refname>
-<refpurpose>configure or display directory quota setting</refpurpose>
+<refpurpose>directory quota 機能の設定と表示</refpurpose>
 </refnamediv>
 
 <refsynopsisdiv id="synopsis">
