--- a/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfdirquota.1
+++ b/gfarm_v2/branches/2.6.dirquota/man/ja/man1/gfdirquota.1
@@ -19,7 +19,7 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-gfdirquota \- configure or display directory quota setting
+gfdirquota \- directory quota 機能の設定と表示
 .SH "SYNOPSIS"
 .HP \w'\fBgfdirquota\fR\ 'u
 \fBgfdirquota\fR [\-u\ \fIユーザ名\fR] [\-P\ \fIpath\fR] \-c\ \fIdirset名\fR...
