--- a/gfarm_v2/branches/2.7/doc/docbook/ja/ref/man1/gfquotacheck.1.docbook
+++ b/gfarm_v2/branches/2.7/doc/docbook/ja/ref/man1/gfquotacheck.1.docbook
@@ -28,12 +28,18 @@
 
 <refsect1 id="description"><title>DESCRIPTION</title>
 
+<para>
+Gfarm 2.6.6 以降は、基本的にこのコマンドを実行する必要がなくなりましたが、
+Gfarm 2.6.12 以降では、一度消去したユーザやグループを再登録したときには実行する必要があります。
+</para>
+
 <para><command moreinfo="none">gfquotacheck</command> は、
 ユーザやグループごとのファイル数とファイルサイズの合計をカウントしなおします。
 </para>
 
 <para>このコマンドは gfarmadm グループに所属している管理者が実行できます。
 </para>
+
 </refsect1>
 
 <refsect1 id="options"><title>OPTIONS</title>
