--- a/gfarm_v2/branches/2.7/man/ja/man1/gfquotacheck.1
+++ b/gfarm_v2/branches/2.7/man/ja/man1/gfquotacheck.1
@@ -34,6 +34,8 @@ gfquotacheck \- ファイル使用量管理表を再構築する
 \fBgfquotacheck\fR [\fIオプション\fR]
 .SH "DESCRIPTION"
 .PP
+Gfarm 2\&.6\&.6 以降は、基本的にこのコマンドを実行する必要がなくなりましたが、 Gfarm 2\&.6\&.12 以降では、一度消去したユーザやグループを再登録したときには実行する必要があります。
+.PP
 \fBgfquotacheck\fR
 は、 ユーザやグループごとのファイル数とファイルサイズの合計をカウントしなおします。
 .PP
