--- a/gfarm_v2/branches/2.7/man/ja/man1/gfquota.1
+++ b/gfarm_v2/branches/2.7/man/ja/man1/gfquota.1
@@ -1,13 +1,22 @@
 '\" t
 .\"     Title: gfquota
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
 .\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
 .TH "GFQUOTA" "1" "29 Oct 2016" "Gfarm" "Gfarm"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -----------------------------------------------------------------
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.\" http://bugs.debian.org/507673
+.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -37,8 +46,6 @@ gfquota \- 現在の使用量と制限値を表示
 ただし、\-D オプション指定時にユーザ名を指定できる管理者グループとしては、 gfarmadm グループではなく、gfarmroot グループが使われます。
 .PP
 \fBgfedquota\fR
-と
-\fBgfquotacheck\fR
 を 実行すると使用量のカウントと制限値が有効になり、
 \fBgfquota\fR
 で表示できるようになります。
@@ -90,7 +97,6 @@ gfquota \- 現在の使用量と制限値を表示
 .RE
 .SH "SEE ALSO"
 .PP
-
 \fBgfedquota\fR(1),
 \fBgfquotacheck\fR(1),
 \fBgfdirquota\fR(1),
