--- a/gfarm_v2/branches/2.7/man/man1/gfquota.1
+++ b/gfarm_v2/branches/2.7/man/man1/gfquota.1
@@ -1,13 +1,22 @@
 '\" t
 .\"     Title: gfquota
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
 .\"      Date: 29 Oct 2016
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
 .TH "GFQUOTA" "1" "29 Oct 2016" "Gfarm" "Gfarm"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -----------------------------------------------------------------
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.\" http://bugs.debian.org/507673
+.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -38,8 +47,6 @@ displays your current usage and limits\&. An administrator in the gfarmadm group
 .PP
 The count of usage and the check of quota are enabled after executing
 \fBgfedquota\fR
-and
-\fBgfquotacheck\fR
 command\&. And,
 \fBgfquota\fR
 can display the current usage and limits\&.
@@ -91,9 +98,8 @@ Displays a list of command options\&.
 .RE
 .SH "SEE ALSO"
 .PP
-
 \fBgfedquota\fR(1),
 \fBgfquotacheck\fR(1),
 \fBgfdirquota\fR(1),
 \fBgfusage\fR(1),
-Gfarm Users\' Manual / Directory Quota
+Gfarm Users\*(Aq Manual / Directory Quota
