--- a/gfarm_v2/branches/2.7/man/man1/gfquotacheck.1
+++ b/gfarm_v2/branches/2.7/man/man1/gfquotacheck.1
@@ -34,8 +34,10 @@ gfquotacheck \- rebuild a table of file usage
 \fBgfquotacheck\fR [\fIoptions\fR]
 .SH "DESCRIPTION"
 .PP
+Gfarm 2\&.6\&.6 or later basically does not need to execute this command, but Gfarm 2\&.6\&.12 or later requires to execute only when re\-registering removed users or groups\&.
+.PP
 \fBgfquotacheck\fR
-rebuilds a table of the current file usage for users and groups\&.
+explicitly rebuilds a table of the current file usage for users and groups\&.
 .PP
 This command can be executed by an administrator in the gfarmadm group\&.
 .SH "OPTIONS"
